--- a/FlaskApp/app/templates/login.html
+++ b/FlaskApp/app/templates/login.html
@@ -3,7 +3,7 @@
 {% block content %}
     <div class="center">
         <h3>Login</h3>
-        <form action = "{{ url_for('login.load') }}" method = "post">
+        <form action = "{{ url_for('login.authenticate') }}" method = "post">
             <table>
                 <tr>
                     <td>Username: </td>
