--- a/FlaskApp/app/templates/base.html
+++ b/FlaskApp/app/templates/base.html
@@ -3,19 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <title>[Platform Name] by [Company Name]</title>
-    <style>
+    <style type="text/css">
+        .main {
+            background-color:#e8e3c9;
+        }
+
+        .headerStyle {
+            font-family: sans-serif;
+            color: #1d4625;
+            text-decoration: underline;
+            padding: 4px;
+
+        }
+
+        
         .center {
             border: 2px solid;
             margin: auto;
             width: 50%;
             padding: 10px;
         }
+        .navBar {
+            text-align: center;
+        }
+
     </style>
 </head>
-<body>
-    <h1>[Platform Name]</h1>
+<body class="main">
+    <div class="headerStyle">
+        <h1>Somefancyappname</h1>
+    </div>
     <div class="content">
-        {% block content %} {% endblock %}
+        {% block content %} {% endblock content %}
     </div>
     <p align="Right""><i>powered by [Company Name]</i></p>
 </body>
