--- a/FlaskApp/app/templates/base.html
+++ b/FlaskApp/app/templates/base.html
@@ -12,7 +12,7 @@
             font-family: sans-serif;
             color: #1d4625;
             text-decoration: underline;
-            padding: 4px;
+            padding: 1px;
 
         }
 
@@ -24,6 +24,7 @@
             padding: 10px;
         }
         .navBar {
+            background: #8a9a5b;
             text-align: center;
         }
 
