--- a/FlaskApp/app/templates/navigation.html
+++ b/FlaskApp/app/templates/navigation.html
@@ -1,9 +1,19 @@
-    <div class="navBar">
-        <p align="Right">Hello, {{ username }}</p>
-        <nav>
-            <a href="">Overview</a> | 
-            <a href="">Financial Insights</a> | 
-            <a href="">Environemnt Social Goverance</a> 
-        </nav>
-        
-    </div>
+<div class="navPaneTop">
+    <h3>CompanyName</h3>
+    <br/>
+    <br/>
+    <nav>
+        <a href="">Overview</a><br/>
+        <a href="">Financial Insights</a><br/>
+        <a href="">Campaign</a><br/>
+        <a href="">Environemnt Social Goverance</a>
+    </nav>
+</div>
+<div class="navPaneSplit"></div>
+<div class="navPaneBot">
+    <nav>
+        <a href="">Settings</a><br/>
+        <a href="">Contact Us</a><br/>
+    </nav>
+    <b>{{ username}}</b>
+</div>
