--- a/FlaskApp/app/templates/home.html
+++ b/FlaskApp/app/templates/home.html
@@ -1,12 +1,15 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    {% include 'navigation.html' %}
-    <h1>This is to test the success of reading post</h1>
-    <p>{{SQSQ}}</p>
-    <h3>Now is the final prove of concept</h3>
-    <div id="chart" class="chart"></div>
-
+    <div class="divBoxHome">
+        <div class="divBoxNav"> {% include 'navigation.html' %} </div>
+        <div class="divBoxContent">
+            <h1>This is to test the success of reading post</h1>
+            <p>{{SQSQ}}</p>
+            <h3>Now is the final prove of concept</h3>
+            <div id="chart" class="chart"></div>
+        </div>
+    </div>
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
     <script type="text/javascript">
         var graphs = {{ FIG1 | safe }};
