--- a/FlaskApp/app/templates/login.html
+++ b/FlaskApp/app/templates/login.html
@@ -1,8 +1,8 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <div class="center">
-        <h3>Login</h3>
+    <div class="divBoxLogin">
+        <h1>CompanyName</h1>
         <form action = "{{ url_for('login.authenticate') }}" method = "post">
             <table>
                 <tr>
