--- a/FlaskApp/app/templates/base.html
+++ b/FlaskApp/app/templates/base.html
@@ -32,6 +32,7 @@
             background-color:#FFFFFF;
             margin-top: 20px;
             margin-bottom: 20px;
+            margin-left: 20px;
             padding: 10px;
             vertical-align: top;
             display: inline-block;
