Works - require fix to interface

--- a/FlaskApp/app/templates/base.html
+++ b/FlaskApp/app/templates/base.html
@@ -36,6 +36,7 @@
             padding: 10px;
             vertical-align: top;
             display: inline-block;
+            min-width: 1000px;
         }
  
         .divBoxNav{
