--- a/FlaskApp/app/templates/navigation.html
+++ b/FlaskApp/app/templates/navigation.html
@@ -3,7 +3,7 @@
     <br/>
     <br/>
     <nav>
-        <a href="">Overview</a><br/>
+        <a href="{{ url_for('home.load') }}">At a Glance</a><br/>
         <a href="">Financial Insights</a><br/>
         <a href="">Campaign</a><br/>
         <a href="">Environemnt Social Goverance</a>
