--- a/FlaskApp/app/templates/base.html
+++ b/FlaskApp/app/templates/base.html
@@ -36,7 +36,40 @@
             padding: 10px;
             vertical-align: top;
             display: inline-block;
-            min-width: 1000px;
+            max-width: 1000px;
+        }
+        
+        /* Section Headers */
+        .divBoxContent h1{
+            margin:10px;
+            font-size: 26px;
+        }
+
+        /* Chart Title Generic */
+        .divBoxContent h2{
+            font-size: 18px;
+            margin: 0px;
+        }
+
+        /* Chart Value Generic */
+        .divBoxContent h3{
+            font-size: 24px;
+            margin: 0px;
+            display:inline;
+        }
+
+        /* Chart Unit Generic */
+        .divBoxContent h4{
+            font-size: 18px;
+            margin: 0px;
+            display:inline;
+        }
+        
+        /* Chart Subtext */
+        .divBoxContent h5{
+            font-size: 12px;
+            margin: 0px;
+            display:inline;
         }
  
         .divBoxNav{
@@ -62,6 +95,44 @@
             margin-top: 10px;
             margin-bottom: 10px;
             border-top: 1px solid black;
+        }
+
+        .divContentAccount{
+            padding: 10px;
+            text-align: left;
+            min-width: 1000px;
+            min-height: 200px;
+            display: inline-block;
+        }
+
+        .divCardAccount{
+            border-radius: 15px;
+            background-color:#EAF2F8;
+            margin-top: 5px;
+            padding: 10px;
+            border: 1px solid;
+            vertical-align: center;
+            display: inline-block;
+            height: 50px;
+            width: 160px;
+        }
+
+        .divCardAccount h2{
+            font-size: 12px;
+            margin: 0px;
+            display:inline;
+        }
+
+        .divCardAccount h3{
+            font-size: 16px;
+            margin: 0px;
+            display:inline;
+        }
+
+        .divCardAccount h4{
+            font-size: 12px;
+            margin: 0px;
+            display:inline;
         }
 
     </style>
