--- a/FlaskApp/app/templates/base.html
+++ b/FlaskApp/app/templates/base.html
@@ -100,9 +100,17 @@
         .divContentAccount{
             padding: 10px;
             text-align: left;
-            min-width: 1000px;
-            min-height: 200px;
+            width: auto;
+            height: auto;
             display: inline-block;
+        }
+
+        .divCardPanel{
+            width: 100%;
+            height: 100%;
+            display: inline-block;
+            overflow-x: auto;
+
         }
 
         .divCardAccount{
