--- a/FlaskApp/app/templates/base.html
+++ b/FlaskApp/app/templates/base.html
@@ -45,33 +45,6 @@
             font-size: 26px;
         }
 
-        /* Chart Title Generic */
-        .divBoxContent h2{
-            font-size: 18px;
-            margin: 0px;
-        }
-
-        /* Chart Value Generic */
-        .divBoxContent h3{
-            font-size: 24px;
-            margin: 0px;
-            display:inline;
-        }
-
-        /* Chart Unit Generic */
-        .divBoxContent h4{
-            font-size: 18px;
-            margin: 0px;
-            display:inline;
-        }
-        
-        /* Chart Subtext */
-        .divBoxContent h5{
-            font-size: 12px;
-            margin: 0px;
-            display:inline;
-        }
- 
         .divBoxNav{
             border-radius: 15px;
             background-color:#EAF2F8;
@@ -97,7 +70,9 @@
             border-top: 1px solid black;
         }
 
-        .divContentAccount{
+        .divCardContent{
+            border-radius: 5px;
+            background-color:#EAF2F8;
             padding: 10px;
             text-align: left;
             width: auto;
@@ -105,39 +80,62 @@
             display: inline-block;
         }
 
+        /* Chart Title Generic */
+        .divCardContent h1{
+            font-size: 18px;
+            margin: 0px;
+        }
+
+        /* Chart Value Generic */
+        .divCardContent h2{
+            font-size: 24px;
+            margin: 0px;
+            display:inline;
+        }
+
+        /* Chart Unit Generic */
+        .divCardContent h3{
+            font-size: 18px;
+            margin: 0px;
+            display:inline;
+        }
+        
+        /* Chart Subtext */
+        .divCardContent h4{
+            font-size: 12px;
+            margin: 0px;
+            display:inline;
+        }
+
         .divCardPanel{
             width: 100%;
             height: 100%;
             display: inline-block;
             overflow-x: auto;
-
         }
 
-        .divCardAccount{
-            border-radius: 15px;
-            background-color:#EAF2F8;
+        .divSubCardContent{
             margin-top: 5px;
-            padding: 10px;
-            border: 1px solid;
+            padding: 5px;
             vertical-align: center;
             display: inline-block;
             height: 50px;
             width: 160px;
         }
 
-        .divCardAccount h2{
+        .divSubCardContent h2{
             font-size: 12px;
             margin: 0px;
             display:inline;
         }
 
-        .divCardAccount h3{
+        .divSubCardContent h3{
             font-size: 16px;
             margin: 0px;
             display:inline;
         }
 
-        .divCardAccount h4{
+        .divSubCardContent h4{
             font-size: 12px;
             margin: 0px;
             display:inline;
