--- a/FlaskApp/app/templates/home.html
+++ b/FlaskApp/app/templates/home.html
@@ -6,7 +6,7 @@
         <div class="divBoxContent">
             <h1>At a Glance</h1>
             <div class="divCardContent">
-                {% include 'accountFundsCard.html' %}
+                {% include 'cards/accountFunds.html' %}
             </div>
             <p>{{SQSQ}}</p>
             <h3>Now is the final prove of concept</h3>
