--- a/FlaskApp/app/templates/home.html
+++ b/FlaskApp/app/templates/home.html
@@ -11,11 +11,14 @@
             <p>{{SQSQ}}</p>
             <h3>Now is the final prove of concept</h3>
             <div id="chart" class="chart"></div>
+            <div id="chart2" class="chart"></div>
         </div>
     </div>
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
     <script type="text/javascript">
         var graphs = {{ FIG1 | safe }};
         Plotly.plot('chart',graphs,{});
+        graphs = {{ FIG2 | safe }};
+        Plotly.plot('chart2',graphs,{});
     </script>
 {% endblock content %}
