Save and move on

--- a/FlaskApp/app/templates/base.html
+++ b/FlaskApp/app/templates/base.html
@@ -36,7 +36,6 @@
             padding: 10px;
             vertical-align: top;
             display: inline-block;
-            max-width: 1000px;
         }
         
         /* Section Headers */
@@ -44,6 +43,12 @@
             margin:10px;
             font-size: 26px;
         }
+
+        .divContentCol{
+            display: inline-block;
+            vertical-align: top;
+        }
+
 
         .divBoxNav{
             border-radius: 15px;
@@ -75,7 +80,7 @@
             background-color:#EAF2F8;
             padding: 10px;
             text-align: left;
-            width: auto;
+            min-width: 450px;
             height: auto;
             display: inline-block;
         }
