--- a/FlaskApp/app/templates/home.html
+++ b/FlaskApp/app/templates/home.html
@@ -5,20 +5,17 @@
         <div class="divBoxNav"> {% include 'navigation.html' %} </div>
         <div class="divBoxContent">
             <h1>At a Glance</h1>
-            <div class="divCardContent">
-                {% include 'cards/accountFunds.html' %}
+            <div class="divContentCol">
+                <div class="divCardContent">
+                    {% include 'cards/accountFunds.html' %}
+                </div>
             </div>
-            <p>{{SQSQ}}</p>
-            <h3>Now is the final prove of concept</h3>
-            <div id="chart" class="chart"></div>
-            <div id="chart2" class="chart"></div>
+            <div class="divContentCol">
+                <div class="divCardContent">
+                    {% include 'cards/performanceSummary.html' %}
+                </div>
+            </div>
         </div>
     </div>
-    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-    <script type="text/javascript">
-        var graphs = {{ FIG1 | safe }};
-        Plotly.plot('chart',graphs,{});
-        graphs = {{ FIG2 | safe }};
-        Plotly.plot('chart2',graphs,{});
-    </script>
+    
 {% endblock content %}
