checkpoint completed Business Performance

--- a/FlaskApp/app/templates/base.html
+++ b/FlaskApp/app/templates/base.html
@@ -83,6 +83,7 @@
             min-width: 450px;
             height: auto;
             display: inline-block;
+            margin: 3px;
         }
 
         /* Chart Title Generic */
