--- a/FlaskApp/app/templates/cards/performanceSummary.html
+++ b/FlaskApp/app/templates/cards/performanceSummary.html
@@ -1,4 +1,5 @@
-<h1>Overall Health</h1><h2>{{ BIZHEALTH }}</h2><br />
+<h1>Business Performance</h1><h2>{{ BIZHEALTH }}</h2><br />
+<h4>{{ BIZREFERENCEMONTH }} Profit against Last 13 months Profit</h4>
 <div id="OverallHealth" class="chart"></div>
 <h1>Revenue Pace</h1>
 <div id="RevPace" class="chart"></div>
