Checkpoint - finer details needed.

--- a/FlaskApp/app/templates/cards/performanceSummary.html
+++ b/FlaskApp/app/templates/cards/performanceSummary.html
@@ -1,9 +1,8 @@
 <h1>Business Performance</h1><h2>{{ BIZHEALTH }}</h2><br />
 <h4>{{ BIZREFERENCEMONTH }} Profit against Last 13 months Profit</h4>
 <div id="OverallHealth" class="chart"></div>
-<h1>Revenue Pace</h1>
+<h4>{{ CURRENTMONTHPACE }} Profit Pace against Last 13 months Average Profit Pace</h4>
 <div id="RevPace" class="chart"></div>
-
 <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 <script type="text/javascript">
     var graphs = {{ FIG1 | safe }};
