--- a/FlaskApp/app/templates/base.html
+++ b/FlaskApp/app/templates/base.html
@@ -7,6 +7,7 @@
 
         .main {
             background-color:#154360;
+            text-align: center;
         }
 
         .divBoxLogin{
@@ -35,11 +36,13 @@
             margin-left: 20px;
             padding: 10px;
             vertical-align: top;
+            text-align: left;
             display: inline-block;
         }
         
         /* Section Headers */
         .divBoxContent h1{
+            text-align: left;
             margin:10px;
             font-size: 26px;
         }
