to fix height logic, else happy

--- a/FlaskApp/app/templates/base.html
+++ b/FlaskApp/app/templates/base.html
@@ -84,7 +84,6 @@
             padding: 10px;
             text-align: left;
             min-width: 450px;
-            height: auto;
             display: inline-block;
             margin: 3px;
         }
@@ -150,6 +149,10 @@
             display:inline;
         }
 
+        .chart {
+            overflow-y: auto;
+            max-height: 400px;
+        }
     </style>
 </head>
 <body class="main">
