--- a/FlaskApp/app/templates/home.html
+++ b/FlaskApp/app/templates/home.html
@@ -8,6 +8,9 @@
             <div class="divContentCol">
                 <div class="divCardContent">
                     {% include 'cards/accountFunds.html' %}
+                </div><br/>
+                <div class="divCardContent">
+                    {% include 'cards/latestTransactions.html' %}
                 </div>
             </div>
             <div class="divContentCol">
