Save copy - time to look at detailed bugfixes

--- a/FlaskApp/app/templates/home.html
+++ b/FlaskApp/app/templates/home.html
@@ -16,6 +16,9 @@
             <div class="divContentCol">
                 <div class="divCardContent">
                     {% include 'cards/performanceSummary.html' %}
+                </div><br />
+                <div class="divCardContent" style="width: auto; display: block;">
+                    {% include 'cards/campaignPerformance.html' %}
                 </div>
             </div>
         </div>
