--- a/FlaskApp/app/templates/base.html
+++ b/FlaskApp/app/templates/base.html
@@ -2,12 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>[Platform Name] by [Company Name]</title>
+    <title>AInalyst</title>
     <style type="text/css">
 
         .main {
             background-color:#154360;
             text-align: center;
+            min-height:100%;/* make sure it is at least as tall as the viewport */
+            position:relative;
         }
 
         .divBoxLogin{
