--- a/FlaskApp/app/templates/base.html
+++ b/FlaskApp/app/templates/base.html
@@ -40,6 +40,8 @@
             vertical-align: top;
             text-align: left;
             display: inline-block;
+            min-width: 1010px;
+            min-height: 600px;
         }
         
         /* Section Headers */
