--- a/FlaskApp/app/templates/base.html
+++ b/FlaskApp/app/templates/base.html
@@ -40,8 +40,8 @@
             vertical-align: top;
             text-align: left;
             display: inline-block;
-            min-width: 1010px;
-            min-height: 600px;
+            width: 1010px;
+            height: 700px;
         }
         
         /* Section Headers */
