--- a/FlaskApp/app/templates/bizInsights.html
+++ b/FlaskApp/app/templates/bizInsights.html
@@ -4,8 +4,9 @@
     <div class="divBoxHome">
         <div class="divBoxNav"> {% include 'navigation.html' %} </div>
         <div class="divBoxContent">
-            <h1>Financial Insights</h1>
+            <h1>Business Insights</h1>
         </div>
+        <div class="divBoxFooter">Powered By CompanyName</div>
     </div>
     
 {% endblock content %}
