--- a/FlaskApp/app/templates/home.html
+++ b/FlaskApp/app/templates/home.html
@@ -22,6 +22,7 @@
                 </div>
             </div>
         </div>
+        <div class="divBoxFooter">Powered By CompanyName</div>
     </div>
     
 {% endblock content %}
