--- a/FlaskApp/app/templates/navigation.html
+++ b/FlaskApp/app/templates/navigation.html
@@ -9,10 +9,15 @@
         {% else %}
             <a href="{{ url_for('home.load') }}">At a Glance</a><br/>
         {% endif %}
-        {% if pageInfo['ActivePage'] == "FinancialInsights" %}
-            <a class="divBoxNavActive" href="{{ url_for('financialInsights.load') }}">Financial Insights</a><br/>
+        {% if pageInfo['ActivePage'] == "BusinessInsights" %}
+            <a class="divBoxNavActive" href="{{ url_for('bizInsights.load') }}">Business Insights</a><br/>
         {% else %}
-            <a href="{{ url_for('financialInsights.load') }}">Financial Insights</a><br/>
+            <a href="{{ url_for('bizInsights.load') }}">Business Insights</a><br/>
+        {% endif %}
+        {% if pageInfo['ActivePage'] == "AIAnalyst" %}
+            <a class="divBoxNavActive" href="{{ url_for('aiAnalyst.load') }}">A.I. Analyst Recommends</a><br/>
+        {% else %}
+            <a href="{{ url_for('aiAnalyst.load') }}">A.I. Analyst Recommends</a><br/>
         {% endif %}
         <a href="">Campaign</a><br/>
         <a href="">Environemnt Social Goverance</a>
